Fix overflow issue on mobile devices (zoom)

--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,7 @@ html, body {
     height: 100%;
     width: 100%;
     overflow: hidden;
+    position: relative;
 }
 
 body {
